--- a/ui/narrative/methods/view_pan_accumulation_plot/display.yaml
+++ b/ui/narrative/methods/view_pan_accumulation_plot/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: Viz Pangenome Accumulation
+name: View Pangenome Accumulation
 
 tooltip: |
     View Pangenome as Accumulation plots for Core and Peripheral
@@ -47,4 +47,4 @@ parameters :
 description : |
     <p>View Pangenome as Accumulation plots for Core and Peripheral.</p>
 
-    <p>Viz Pangenome Accumulation App written by Dylan Chivian (DCChivian@lbl.gov), using the Pangenome Calculator OrthoMCL (<i>Li Li, Christian J. Stoeckert, Jr., and David S. Roos. OrthoMCL: Identification of Ortholog Groups for Eukaryotic Genomes. Genome Res. 2003 13: 2178-2189</i>).</p>
+    <p>View Pangenome Accumulation App written by Dylan Chivian (DCChivian@lbl.gov), using the Pangenome Calculator OrthoMCL (<i>Li Li, Christian J. Stoeckert, Jr., and David S. Roos. OrthoMCL: Identification of Ortholog Groups for Eukaryotic Genomes. Genome Res. 2003 13: 2178-2189</i>).</p>
