--- a/ui/narrative/methods/run_DomainAnnotation_Sets/display.yaml
+++ b/ui/narrative/methods/run_DomainAnnotation_Sets/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: DomainAnnotation Sets
+name: Annotate Domains in a GenomeSet
 
 tooltip: |
     Run DomainAnnotation on a Genome Set
