--- a/ui/narrative/methods/view_fxn_profile/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile/display.yaml
@@ -36,7 +36,7 @@ parameters :
             The Set of Genomes to examine
         long-hint  : |
             The Set of Genomes to examine
-    top_level_namespace :
+    namespace :
         ui-name : |
             Domain Namespace
         short-hint : |
@@ -68,9 +68,9 @@ parameters :
         ui-name : |
             Vertical orientation?
         short-hint : |
-            Show table/heatmap with species along vertical and family categories along horizontal
+            Show table/heatmap with genomes along vertical and family categories along horizontal
         long-hint  : |
-            Show table/heatmap with species along vertical and family categories along horizontal
+            Show table/heatmap with genomes along vertical and family categories along horizontal
 
 description : |
     <p>After DomainAnnotation, you can use this method to examine the general functional distribution or specific functional gene families for a Genome Set.</p>
