changed log_scale to log_base

--- a/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
@@ -85,7 +85,7 @@ parameters :
             Ignore domain hits below e-value threshold
         long-hint  : |
             Ignore domain hits below e-value threshold
-    log_scale :
+    log_base :
         ui-name : |
             Heatmap Log Base
         short-hint : |
