fixed path to icon

--- a/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
@@ -8,7 +8,7 @@ tooltip: |
 
 screenshots: []
 
-icon: domains_profile_phylo-purple.png
+icon: domains_phylo-purple.png
 
 #
 # define a set of similar methods that might be useful to the user
