--- a/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: View Fxn Profile Phylo
+name: View Function Profile Phylo
 
 tooltip: |
     Examine the general functional distribution or specific functional gene families for the Genomes in a Species Tree
