--- a/ui/narrative/methods/view_pan_circle_plot/display.yaml
+++ b/ui/narrative/methods/view_pan_circle_plot/display.yaml
@@ -45,7 +45,7 @@ parameters :
             The Pangenome to view against the Base Genome
     input_compare_genome_refs :
         ui-name : |
-            Compare Genome(s)
+            Custom Compare Genome(s)
         short-hint : |
             The Genome(s) to compare against the base
         long-hint  : |
