--- a/ui/narrative/methods/view_pan_circle_plot/display.yaml
+++ b/ui/narrative/methods/view_pan_circle_plot/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: Pangenome Circle Plot
+name: Pangenome Circle Plot - v1.0.0
 
 tooltip: |
     View a Microbial Pangenome as a Circle Plot
