beginning trim_tree_to_genomeSet() by cloning view_tree()

--- a/ui/narrative/methods/trim_tree_to_genomeSet/display.yaml
+++ b/ui/narrative/methods/trim_tree_to_genomeSet/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: Trim Species Tree to GenomeSet - v1.1.0
+name: Trim Species Tree to GenomeSet - v1.2.0
 
 tooltip: |
     Trim a Species Tree to match a GenomeSet
@@ -38,16 +38,20 @@ parameters :
         ui-name : |
             GenomeSet
         short-hint : |
-            The GenomeSet that the Species Tree should collapse to match
+            The GenomeSet that the Species Tree should be trimmed to match
     desc :
         ui-name : |
             Description
         short-hint : |
             A description of the trimmed tree
+    output_name :
+        ui-name : |
+            Output Tree
+        short-hint : |
+            The name for the trimmed tree output object
 
 description : |
     <p>Trim a Species Tree to only contain leaves corresponding to members of a GenomeSet.</p>
 
     <p><i>Trim Species Tree to GenomeSet</i> App written by Dylan Chivian (DCChivian@lbl.gov)</p>
     <p>App will collapse a Species Tree object to only contain leaves correspondng to members of a GenomeSet.  Any extra genomes in the GenomeSet that are not found in the tree will be ignored.  Essentially this App represents an intersection of the SpeciesTree and the GenomeSet.</p>
-
