--- a/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
@@ -144,3 +144,9 @@ description : |
     <p>After Speces Tree construction and DomainAnnotation, you can use this method to examine the general functional distribution or specific functional gene families for the Genomes in the Species Tree.</p>
 
     <p>View Fxn Profile Phylo App written by Dylan Chivian (DCChivian@lbl.gov) using DomainAnnotation App by John-Marc Chandonia (JMChandonia@lbl.gov), Pavel Novichkov (PSNovichkov@lbl.gov), and Roman Sutormin (RSutormin@lbl.gov) and Species Tree Builder App by Roman Sutormin and Paramvir Dehal (PSDehal@lbl.gov).</p>
+
+publications :
+    -
+        display-text: |
+            Arkin AP, Cottingham RW, Henry CS, Harris NL, Stevens RL, Maslov S, et al. KBase: The United States Department of Energy Systems Biology Knowledgebase. Nature Biotechnology. 2018;36: 566. doi: 10.1038/nbt.4163
+        link: https://www.nature.com/articles/nbt.4163
